[hui] Fix color picker flickering when out of bound

--- a/hide_hl/res/ui/style/hui-color-picker.less
+++ b/hide_hl/res/ui/style/hui-color-picker.less
@@ -30,7 +30,7 @@ hui-color-picker {
 	layout: vertical;
 	background-type: hui;
 	>hui-background {
-		background: @widget-bg;
+		background: @popup-bg;
 		border-radius: @base-corner-radius;
 		outline: 2 @widget-border;
 	}
